version 2.1-alpha XX-Ago-2012
. [NEW] GL ES 2.0 code: General improvements in the shader and cache code. Better error reporting.
. [NEW] Javascript bindings for cocos2d, CocosDenshion and Chipmunk.
			Includes Javascript remote console
. [NEW] Node: Added RotationalSkew featur (compatible with Flash)
. [NEW[ Tests: Tests for RotationalSkew feature

version 2.0.0 8-Jul-2012
. [FIX] EventDispatcher: fixed ccMouseEnter/Exit
. [FIX] LabelTTF: supports multiline even if no dimensions are provided
. [FIX] Macros: CCLOGERROR defined in ccDeprecated as CCLOGWARN
. [FIX] Scheduler: removeUpdateFromHash calls [target release] at the very end to prevent a possible crash
. [FIX] Templates: Generate no-flicker-at-startup code
		Improved Physics templates: multitouch and gravity+accel works OK
. [FIX] TexturePVR: wrong type when calculating PVR lenght
. [FIX] Xcode: Fixed compile errors and warnings in Xcode 4.5
. [3RD] libpng: updated to 1.2.49

version 2.0-rc2 03-Jun-2012
. [NEW] Added Javascript test using JSCocoa (Mac only)
			ActionTests, SpriteTests (WIP)
. [NEW] Director: Added popToRootScene method
. [NEW] RenderTexture: Added support for Depth Stencil
. [FIX] Actions: CardinalSpline#copy uses tension (issue #1377)
			CallFunc: fixed possible crash when releasing the action (issue #1369)
. [FIX] ccArray: Implementation is no longer inlined. Needed for gen_bridge_metada.
		Make it compatible with C99
		Added __cplusplus #ifdef in header
. [FIX] CocosDenshion: Fixed buffer overrun while resizing buffer (issue #1372)
. [FIX] Director: Fixed memory leak when createStatsLabel was called more than once (issue #1373)
. [FIX] FileUtils: easier to override the search folder
		Added __cplusplus #ifdef in header
. [FIX] LabelTTF: improved loading time. Label is updated only if the string is set.
. [FIX] Macros: CCLOG doesn't log the function name. Only CCLOGWARN
. [FIX] MenuItem: setIsEnabled can be called before setting the images